<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:padding="20dp"
        android:src="@mipmap/ic_login_cancel_normal" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:src="@mipmap/ic_cc_dog"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:text="@string/app_name"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/white"
        android:layout_below="@+id/iv_logo" >

        <com.example.eric.lbstest.views.CleanableEditText
            android:id="@+id/et_phone"
            style="@style/login_edit_style"
            android:layout_marginLeft="0dp"
            android:hint="Phone number"
            android:inputType="phone"
            android:layout_toLeftOf="@+id/btn_send_verify_code"
            android:maxLength="11" >

            <requestFocus />
        </com.example.eric.lbstest.views.CleanableEditText>

        <Button
            android:id="@+id/btn_send_verify_code"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_send_verify_code_shape"
            android:text="@string/send_verification_code"
            android:textColor="#B1B1B3"
            android:textSize="12sp" />
    </RelativeLayout>

    <com.example.eric.lbstest.views.CleanableEditText
        android:id="@+id/et_password"
        style="@style/login_edit_style"
        android:layout_below="@+id/et_verifyCode"
        android:layout_marginTop="0.5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <com.example.eric.lbstest.views.CleanableEditText
        android:id="@+id/et_password_verify"
        style="@style/login_edit_style"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="0.5dp"
        android:ems="10"
        android:hint="Verify your password"
        android:inputType="textPassword"/>

    <com.example.eric.lbstest.views.CleanableEditText
        android:id="@+id/et_verifyCode"
        style="@style/login_edit_style"
        android:layout_below="@+id/layout_phone"
        android:layout_marginTop="0.5dp"
        android:ems="10"
        android:hint="Verification code"
        android:inputType="number" />

    <com.example.eric.lbstest.views.CleanableEditText
        android:id="@+id/et_nickname"
        style="@style/login_edit_style"
        android:layout_below="@+id/et_password_verify"
        android:layout_marginTop="10dp"
        android:maxLength="32"
        android:maxLines="1"
        android:hint="Nickname"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_nickname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login_selector"
        android:text="@string/create_account"
        android:textColor="#5c5c5c"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_create_account"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit means agreeing on the" />

        <TextView
            android:id="@+id/tv_user_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/user_rule"
            android:textColor="#5c5c5c"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>
